--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -83,4 +83,47 @@
         position: relative;
     }
    }
+
+
+    .serum {
+        position: relative;
+        max-width: 958px;
+        width: 100%;
+        margin: 0 auto;
+        h1 {
+            font-size: 1.125em;
+            line-height: 3.000em;
+            width: 100%;
+            text-align: center;
+            padding: 0  0 10px 0;
+            border-bottom: 1px solid $border-color;
+        }
+        h2 {
+            font-family: 'GillSans-Light', Arial, sans-serif;
+            font-size: 4.188em;
+            line-height: 0.896em;
+            text-align: left;
+            padding: 0;
+            margin: 0 0 30px 0;
+        }
+        
+        .serum-content {
+            padding: 0;
+            width: 100%;
+            display: inline-block;
+
+            .serum-image {
+                float: none;
+                padding: 0;
+            }
+            .text {
+                float: left;
+                max-width: 470px;
+                width: 100%;
+                padding: 20px;
+            }
+        }
+    }
+
+
 }
